# NCBImeta

./: .bioconda_autobump.sh  .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .travis.yml.master  CHANGELOG.md  LICENSE  MANIFEST.in  NCBImeta.py  NCBImeta.py.bak  README.md  Yersinia_pestis_Cui_2013.txt  _config.yml  automate.py  codecov.yml  conda_update.sh  config.py  contrib.md  contribute.md  coverage.xml  dev_dependencies.txt  environment.yaml  ncbinfect.py  ncbinfect.py.xml_bak  output  pyproject.toml  requirements.txt  setup.cfg  setup.py  test  ver_update.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  markdown_lint.yaml
annotate/: .README_Annotate.md.swp  Morelli (2010 SI Supplementary Table 3.xls  README_Annotate.md  Yersinia_pestis_Cui_2013.txt  Yersinia_pestis_Gibbons_2012.txt  Yersinia_pestis_LAB_PASSAGE.txt  Yersinia_pestis_Morelli_2010.txt  Yersinia_pestis_Revazishvili_2008.txt  Yersinia_pestis_Riehm_2012.txt  Yersinia_pestis_Shen_2010.txt  Yersinia_pestis_Sun_2012.txt  Yersinia_pestis_Valtuena_2016.txt
config/: BioProjectTest.py  BioSampleTest.py  Comprehensive.py  Comprehensive_config.py  NCBImeta_config.py  PlasmodiumGenome_config.py  README_config.md  README_config.txt  SRATest.py  TuberculosisGenome_config.py  hmp_oral.yaml  mammuthus.yaml  monkeypox.yaml  ncov_canada.yaml  pseudomonas_aeruginosa_config.py  yersinia_pestis.yaml
database/: 2018-JAN-31_Plague_Genome_Metadata_ForPlotting.txt  2018-JAN-31_Plague_Genome_Metadata_ForPlotting.xlsx  Assembly_Complete.txt  Assembly_Complete_Dedup.txt  Assembly_InnerJoin_BioSample.txt  Assembly_InnerJoin_BioSample_Dedup.txt  Assembly_InnerJoin_BioSample_Dedup_Accessions.txt  Assembly_InnerJoin_BioSample_Plague322.txt  BioSample.txt  BioSample.xlsx  BioSample_Consensus.txt  BioSample_Consensus_Pivot.txt  BioSample_Consensus_Pivot_Table.txt  BioSample_Consensus_Pivot_Table.xlsx  BioSample_Consensus_Pivot_Table2.txt  BioSample_Consensus_Pivot_Table2.xlsx  BioSample_Edit.txt  BioSample_OuterJoin_Assembly.txt  BioSample_PlotData.txt  BioSample_stripComma.csv  BioSample_stripComma.txt  Yersinia_pestis_NCBInfect.sqlite  Yersinia_pestis_db.sqlite  Yersinia_pestis_db.sqlite.bak_Apr17  geocoded.txt  geocoded_0-50.txt
docs/: schema.md
example/: annot.txt  annot_1.txt  config.py  config.yaml  my_organism_annot.txt  my_organism_annot_2.txt  my_organism_annot_3.txt  my_organism_db.sqlite.bak  my_organism_db_SRA.txt  (+4 more)
(+155 files in other folders)
